# naive_bayes

./: README.md  TUTORIAL_NOTEBOOK_MEJORADO_.ipynb  pyproject.toml
examples/: colab_demo.py
src/bayes/: __init__.py  core.py  model.py
