[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-ffq"
version = "0.1.3"
description = "Bayes rule scoring (Epsilon + Log-Odds) for dummy matrices, with safe X/y alignment and Proyecto-42-style Excel output."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "openpyxl>=3.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
